feat: update open api docs, add ping method
