# delivery/ginserver/server.go
@@ -16,4 +16,10 @@ func Run(port int, storage storage.Storage) {
 
 	setupCardService(router, instance.NewCardService(storage))
 	setupExerciseService(router, instance.NewExerciseService(storage))
+	setupIOService(router, instance.NewIOService())
+	router.GET("/ping", pingHandler)
+}
+
+func pingHandler(ctx *gin.Context) {
+	ctx.JSON(200, gin.H{"message": "pong"})
 }
