# delivery/ginserver/swagger.yaml
@@ -131,6 +131,42 @@ paths:
         '400':
           description: Bad request
 
+  /io/import/url:
+    post:
+      summary: Import an article from a URL
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: string
+                example: OK
+        '400':
+          description: Bad request
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                url:
+                  type: string
+                  example: https://www.example.com
+
+  /ping:
+    get:
+      summary: Ping the server
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Pong
+
 components:
   schemas:
     Card:
